CollapsibleMenuView no longer jumps when loading the page (#874)

--- a/packages/terra-collapsible-menu-view/src/CollapsibleMenuView.scss
+++ b/packages/terra-collapsible-menu-view/src/CollapsibleMenuView.scss
@@ -46,5 +46,9 @@
     border-right: 1px solid #dedfe0;
     height: 2.143rem;
   }
+
+  .is-calculating {
+    visibility: hidden;
+  }
   /* stylelint-enable */
 }
